tests/parser/bad/cmodule-version-number-contract-with.scilla
scilla_version 0

(* underscores *)
contract _Test
()
